<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="195dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/annieeasley" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="88dp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/usaflag" />

    <TextView
        android:id="@+id/textView_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/homeActivity_labelName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/homeActivity_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_name"
        app:layout_constraintStart_toEndOf="@+id/textView_label_name" />

    <TextView
        android:id="@+id/textView_label_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeActivity_labelBirthDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_name" />

    <TextView
        android:id="@+id/textView_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/homeActivity_birthDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_birth"
        app:layout_constraintStart_toEndOf="@+id/textView_label_birth" />

    <TextView
        android:id="@+id/textView_birth_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/homeActivity_birthLocation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_birth"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/textView_birth"
        app:layout_constraintTop_toBottomOf="@+id/textView_birth" />

    <TextView
        android:id="@+id/textView_label_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeActivity_labelNationality"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_location" />

    <TextView
        android:id="@+id/textView_nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/homeActivity_nationality"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_nationality"
        app:layout_constraintStart_toEndOf="@+id/textView_label_nationality" />

    <TextView
        android:id="@+id/textView_label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeActivity_labelLocation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_age" />

    <TextView
        android:id="@+id/textView_label_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeActivity_labelAge"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView_birth_location" />

    <TextView
        android:id="@+id/textView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/homeActivity_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_age"
        app:layout_constraintStart_toEndOf="@+id/textView_label_age" />

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/homeActivity_location"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_label_location"
        app:layout_constraintStart_toEndOf="@+id/textView_label_location" />

    <Button
        android:id="@+id/button_biography"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/homeActivity_buttonBioLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="19sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_more_info"
        app:layout_constraintEnd_toStartOf="@+id/button_more_info"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_more_info"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:padding="10dp"
        android:text="@string/homeActivity_buttonInfoLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_donate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_biography" />

    <Button
        android:id="@+id/button_donate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/homeActivity_buttonDonateLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="19sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_more_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_more_info" />

    <TextView
        android:id="@+id/textView_bio"
        android:layout_width="359dp"
        android:layout_height="179dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:inputType="textMultiLine"
        android:justificationMode="none"
        android:text="@string/homeActivity_bio"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="14.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_bio" />

    <TextView
        android:id="@+id/textView_label_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:justificationMode="none"
        android:text="@string/homeActivity_labelBio"
        android:textColor="@color/black"
        android:textSize="14.5sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_bio"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>