<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BiographyActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="129dp"
            android:layout_height="128dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/centaurrocket" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="126dp"
            android:layout_height="124dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/fortranlogo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="234dp"
            android:layout_height="103dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:srcCompat="@drawable/cassinispace" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="327dp"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:text="@string/bioActivity_accomplishment3"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <View
            android:id="@+id/divider3"
            android:layout_width="364dp"
            android:layout_height="4dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="142dp"
            android:layout_height="100dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/clevelandflag" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="167dp"
            android:layout_height="108dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.213"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/birminghamflag" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/bioActivity_labelEducation"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_labelEarlyLife"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bioActivity_labelAccomplishments"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider2"
            android:layout_width="364dp"
            android:layout_height="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/imageView_education1"
                android:layout_width="174dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/cleveland_state_university_logo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                android:layout_marginTop="6dp"
                android:text="@string/bioActivity_education1"
                android:textAlignment="viewStart"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/xavierlogo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bioActivity_education2"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="177dp"
                android:layout_height="110dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                app:srcCompat="@drawable/highschool" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/bioActivity_education3"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="144dp"
            android:layout_height="116dp"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_earlyLife1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="157dp"
            android:layout_height="123dp"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_earlyLife2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="249dp"
            android:layout_height="122dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/nacanasalogo" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="297dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_earlyLife3"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="144dp"
            android:layout_height="121dp"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_accomplishment1"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="143dp"
            android:layout_height="137dp"
            android:layout_marginTop="16dp"
            android:text="@string/bioActivity_accomplishment2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>